# files-downloader

./: .pylintrc  pyproject.toml  test.py
.github/workflows/: build.yml
downloaderx/: files_group.py  invoker.py  statistics.py
downloaderx/file/: file_downloader.py  range_downloader.py
files_downloader/: common.py  error.py  file.py  files_group.py  invoker.py  range_downloader.py  safe_passage.py  segment.py  type.py  utils.py
files_downloader/file/: __init__.py  common.py  file_downloader.py  range_downloader.py  retry.py
tests/: start_flask.py  test_download.py  test_file_downloader.py  test_files_group.py  test_safe_passage.py
